# TelegramHelper

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  claude.md  config.py  deploy.sh  docker-compose.yml  main.py  migrate_duckdb_to_sqlite.py  pyproject.toml  renew_msg_data.session
static/: daily_digest_template.txt  dashboard.html  deduplicate_pair_prompt.txt  deduplicate_prompt.txt  sent_messages.html  summarize_prompt.txt  telegram_summary_template.html
utils/: gpt_utils.py  models.py  msg_helper.py  processor.py  subscribers_cache.py  text_similarity.py
utils/duckdb/: __init__.py  connection.py  messages.py  schema.py
utils/scorer/: embedder.py  features.py  reaction.py  scorer.py
utils/sqlite/: __init__.py  connection.py  messages.py  schema.py
utils/telegram/: __init__.py  reader.py  sender.py
